tools: revert osrs.sh java options to original due to instability